GIL UI layout and menu fixes

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -740,7 +740,7 @@ table.profile-audit-log TH,
   font-size: 0.94em;
 }
 #termsText {
-  padding: 1.5em 2em;
+  padding: 0 1em;
 }
 #agreeLabel {
   margin-left: 2em;
