--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -112,7 +112,8 @@
 /** Logo **/
 #tnthLogo {
   float: right;
-  margin-right: 2.5em;
+  clear: left;
+  margin-right: 32%;
   img {
     height: 75px;
   }
@@ -126,7 +127,7 @@
 }
 #tnthTopLinks {
   float: left;
-  margin-left: 0.5em;
+  /*margin-left: 0.5em;*/
 }
 
 /** Buttons **/
@@ -156,7 +157,7 @@
   }
 }
 #tnthUserBtn {
-  padding: 6px 24px;
+  padding: 0 14px 0 0;
   height: inherit;
 }
 #tnthHomeBtn {
@@ -345,10 +346,10 @@
 }
 @media (min-width: 1219px) {
    #tnthTopLinks {
-    margin-left: 0em;
+    margin-left: 0;
    }
    #tnthLogo {
-    margin-right: 2em;
+    margin-right: 32%;
   }
 }
 @media (min-width: 1220px) {
@@ -359,7 +360,7 @@
     margin-right: 0;
   }
   #tnthLogo {
-    margin-right: 40%;
+    margin-right: 42%;
   }
 }
 @media (min-width: 1380px) {
