--- a/portal/templates/gil/about.html
+++ b/portal/templates/gil/about.html
@@ -134,7 +134,7 @@
         $(document).ready(function() {
             $("body").attr("class", "page-about theme--intro-light");
             $("#repoVersion").show();
-            $(".side-nav-items__item--about").hide();
+            setSelectedNavItem($(".side-nav-items__item--about"));
         });
     </script>
 {% endblock %}
