--- a/portal/templates/gil/decision-support.html
+++ b/portal/templates/gil/decision-support.html
@@ -73,7 +73,7 @@
     <script>
         $(document).ready(function() {
             $("body").attr("class", "page-about theme--intro-light");
-            $(".side-nav-items__item--decisionsupport").hide();
+            setSelectedNavItem($(".side-nav-items__item--decisionsupport"));
             $("footer a[href='/decision-support']").hide();
         });
     </script>
