--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -241,7 +241,7 @@
 {% block document_ready %}
     <script>
         $(document).ready(function() {
-            $(".side-nav-items__item--whatisprostatecancer").hide();
+            setSelectedNavItem($(".side-nav-items__item--whatisprostatecancer"));
         });
     </script>
 {% endblock %}
