--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -112,7 +112,9 @@
 /** Logo **/
 #tnthLogo {
   float: right;
-  margin-right: 2.5em;
+  clear: left;
+ /* margin-right: 2.5em;*/
+ margin-right: 32%;
   transition: margin-right 10ms ease-in;
 }
 #tnthLogo img {
@@ -127,7 +129,7 @@
 }
 #tnthTopLinks {
   float: left;
-  margin-left: 0.5em;
+  /*margin-left: 0.5em;*/
 }
 /** Buttons **/
 .tnth-btn-group {
@@ -156,7 +158,7 @@
   background-color: #fff;
 }
 #tnthUserBtn {
-  padding: 6px 24px;
+  padding: 0 14px 0 0;
   height: inherit;
 }
 #tnthHomeBtn {
@@ -326,7 +328,7 @@
     margin-left: 0em;
   }
   #tnthLogo {
-    margin-right: 2em;
+    margin-right: 32%;
   }
 }
 @media (min-width: 992px) {
@@ -343,7 +345,7 @@
   }
 
   #tnthLogo {
-    margin-right: 40%;
+    margin-right: 42%;
   }
 }
 @media (min-width: 1380px) {
