--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -5928,7 +5928,7 @@ figure.nav-overlay {
     left: 0;
     top: 0;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     background: #F7F7F7;
     color: #4A4A4A;
     width: 495px;
@@ -5947,13 +5947,17 @@ figure.nav-overlay {
     padding: 65px;
 }
 @media (max-width: 767px) {
+    .side-nav {
+        top: 15%
+    }
     .side-nav__inner {
         padding: 20px;
     }
-}
-@media (max-width: 767px) {
     .is-nav-expanded .side-nav {
         width: 100%;
+    }
+    .side-nav * {
+        font-size: 14px
     }
 }
 .is-nav-expanded .side-nav {
@@ -5992,10 +5996,13 @@ figure.nav-overlay {
 }
 .side-nav-items__item {
     display: block;
-    font-size: 26px;
-    line-height: 30px;
+    font-size: 24px;
+    line-height: 28px;
     font-weight: bold;
     margin: 0 0 20px;
+}
+.side-nave-items__item--selected a {
+    color: #586c73;
 }
 .side-nav-items__item-disabled {
     opacity: 0.6;
@@ -6017,7 +6024,7 @@ figure.nav-overlay {
     top: -3px;
 }
 .side-nav-items__item--accentuated a {
-    font-size: 22px;
+    font-size: 23px;
     line-height: 22px;
 }
 .side-nav-items__item figure {
@@ -6972,7 +6979,7 @@ figure.nav-overlay {
 }
 .home--items-wrapper {
     position: relative;
-    top: 300px;
+    top: 210px;
     background-color: rgba(95, 103, 110, 1);
 }
 .home--item-container, .home--item-container-full, .home--registration-container {
@@ -7018,11 +7025,18 @@ figure.nav-overlay {
 #portalMain .page-intro {
     padding: 1.2em;
 }
+#portalMain .button-callout {
+    padding: 0.5em 0 !important;
+    margin: 0.1em 0 !important;
+}
 #portalMain .icon-box__button span {
     font-size: 0.75em;
 }
 #portalMain .icon-box__lowhead {
     font-size: 1.2em;
+}
+#portalMain .page-intro__main {
+    margin-bottom: 0;
 }
 .home--footer-container {
     margin-top: 25em;
@@ -7075,6 +7089,10 @@ a.home--modal-link {
     white-space: nowrap;
     text-overflow: ellipsis;*/
     font-size: 0.97em;
+}
+#portalScrollArrow {
+    cursor: pointer;
+    margin: 1em 0 !important;
 }
 .capitalize {
     text-transform: capitalize;
@@ -7152,6 +7170,7 @@ a.home--modal-link {
     }
     .home--item-container, .home--item-container h4, .home--item-text * {
         font-size: 1em !important;
+        padding: 0.2em;
     }
 }
 
