--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -103,8 +103,8 @@
   {% endblock %} <!-- end block nav-->
   {% block upperbanner %}
       {% if not user %}
-      <div class="upper-banner"><a class="upper-banner__text" data-toggle="modal" data-target="#modal-register">Have a code from your doctor? Click here to Sign Up
-          <figure></figure></a><a class="upper-banner__close js-close-upper-banner"> <!-- onclick="setNoBanner()" awaiting ok on this functionality-->
+      <div class="upper-banner"><a class="upper-banner__text" data-toggle="modal" data-target="#modal-register">Have a code from your doctor? Click here to join us
+          <figure></figure></a><a class="upper-banner__close js-close-upper-banner" onclick="setNoBanner()"> 
           <figure></figure></a></div>
       {% endif %}
   {% endblock %}
@@ -146,7 +146,7 @@
           <li class="nav-list__item"><a href="{{PORTAL}}/">Home</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/about">About</a></li>
           <li class="nav-list__item"><a class="decision-support-link" href="{{PORTAL}}/decision-support">Decision Support</a></li>
-          <li class="nav-list__item"><a href="{{PORTAL}}/symptom-tracker">Symptom Tracker</a></li>
+          <li class="nav-list__item"><a class="symptom-tracker-link" href="{{PORTAL}}/symptom-tracker">Symptom Tracker</a></li>
         </ul>
         <ul class="nav-list nav-list--lower">
           <li class="nav-list__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
@@ -323,16 +323,36 @@
               $('#modal-login-register').modal('hide');
               setTimeout("$('#modal-login').modal('show'); ", 400);
           };
+          function setSelectedNavItem(obj) {
+              $(obj).addClass("side-nave-items__item--selected");
+              $("li.side-nave-items__item--selected").find("a").attr("href", "#");
 
+              $(obj).on("click", function(event) {
+                    event.preventDefault();
+                    $(".side-nav__close").trigger("click");
+                    return;
+               });
+          };
           function filterMenu() {
               $.ajax({
                 url: "{{PORTAL}}/gil-interventions-items",
-                context: document.body
+                context: document.body,
+                cache: false
               }).done(function(data) {
                 //console.log(data)
                 var ct = 0;
-                $(".side-nav-items__item--decisionsupport").hide();
+                //$(".side-nav-items__item--decisionsupport").hide();
                 if (data.interventions) {
+                  if (data.interventions.length > 0) {
+                    var db = $(".side-nav-items__item--dashboard");
+                    if (db.length == 0) {
+                      $(".side-nav-items").prepend('<li class="side-nav-items__item side-nav-items__item--dashboard"><a href="{{PORTAL}}/home">My Dashboard</a></li>');
+                      if ($("#portalMain").length > 0) {
+                           setSelectedNavItem($(".side-nav-items__item--dashboard"));
+                      };
+                    };
+                    $(".side-nav-items__item--home").hide();
+                  };
                   (data.interventions).forEach(function(item) {
                       var d = item.description;
                       var b = item.link_url;
@@ -343,8 +363,8 @@
                       var sm2 = /self[_\s]?management/gi;
                       if (dm.test(d) || dm.test(n)) {
                           if (!disabled) {
-                              $(".side-nav-items__item--decisionsupport a").attr("href",b);
-                              $(".side-nav-items__item--decisionsupport").show();
+                              //$(".side-nav-items__item--decisionsupport a").attr("href",b);
+                              //$(".side-nav-items__item--decisionsupport").show();
                               $(".decision-support-link").each(function() {
                                 $(this).attr("href", b);
                                 $(this).removeClass("icon-box__button--disabled");
@@ -361,7 +381,7 @@
                       else if (sm.test(d) || sm2.test(n)) {
                           //do nothing - always display symptom tracker
                           if (!disabled) {
-                            $(".side-nav-items__item--symptomtracker a").attr("href", b);
+                            //$(".side-nav-items__item--symptomtracker a").attr("href", b);
                             $(this).removeClass("icon-box__button--disabled");
                             $(".symptom-tracker-link").each(function() {
                                 $(this).attr("href", b)
@@ -378,15 +398,15 @@
                       }
                       else if ($.trim(d) != "") {
                           //only draw 3 at most - otherwise the menu won't fit the screen
-                          if (ct < 3) {
+                          //if (ct < 3) {
                               if (!disabled) {
                                   var eitem = $("#intervention_item_" + ct);
                                   if (eitem.length == 0) { //only draw this when there isn't already one
-                                    $(".side-nav-items__item--symptomtracker").after('<li id="intervention_item_' + ct + '" class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="' + b + '" class="capitalize">' + n + '</a></li>');
+                                    $(".side-nav-items__item--dashboard").after('<li id="intervention_item_' + ct + '" class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="' + b + '" class="capitalize intervention-link">' + n + '</a></li>');
                                     ct++;
                                   };
                               };
-                          };
+                          //};
 
                       };
                   });
@@ -413,10 +433,15 @@
 
          $(document).ready(function(){
 
-            //checkBannerStatus(); awaiting ok on this functionality
-
+            checkBannerStatus(); 
+            
             $("#modal-login").on("show.bs.modal", function(e) {
                 loader();
+            });
+
+            $("a.icon-box__button--disabled, .side-nave-items__item--selected a").on("click", function(e) {
+                e.preventDefault();
+                return false;
             });
 
             // Configure and start the session timeout monitor
@@ -442,7 +467,13 @@
             $("li.side-nav-items__item a, a.icon-box__button--main, li.nav-list__item a").not("[data-toggle='modal']").not("[id='submitButton']").on("click", function(e) {
               e.stopPropagation();
 
-              if (!$(this).parent().hasClass("side-nav-items__item-disabled") && !$(this).hasClass("icon-box__button--disabled")) loader(true);
+              if (!$(this).parent().hasClass("side-nav-items__item-disabled") 
+                && !$(this).hasClass("icon-box__button--disabled") 
+                && !$(this).parent().hasClass("side-nave-items__item--selected")
+                && !$(this).hasClass("symptom-tracker-link")
+                && !$(this).hasClass("decision-support-link")
+                && !$(this).hasClass("intervention-link")
+                ) loader(true);
               else loader(false);
             });
             setTimeout("loader(false);", 0);
