--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -27,7 +27,7 @@
                     {% if display.link_url is none %}
                         <a class="icon-box__button icon-box__button--main icon-box__button--disabled" href="javascript: loader(false);"><span class="home--disabled-button">{{_("Start")}}<figure></figure></span></a>
                     {% else %}
-                        <a class="icon-box__button icon-box__button--main" href="{{ display.link_url }}"><span>{{ display.link_label }}<figure></figure></span></a>
+                        <a class="icon-box__button icon-box__button--main intervention-link" href="{{ display.link_url }}"><span>{{ display.link_label }}<figure></figure></span></a>
                     {% endif %}
                     </div>
                 </div>
@@ -69,6 +69,13 @@
 {% endblock %}
 {% block document_ready %}
     <script>
+
+        function setNavItemSelected() {
+            console.log($(".side-nav-items__item--dashboard").length);
+            $(".side-nav-items__item--dashboard").addClass("side-nave-items__item--selected");
+            $("li.side-nave-items__item--selected").find("a").removeAttr("href");
+        };
+
         $(document).ready(function() {
             $("body").attr("class", "page-home");
             $("aside").hide();
@@ -87,6 +94,7 @@
             if (hc.length == 1) {
                 hc.removeClass("home--item-container").addClass("home--item-container-full");
             };
+            setTimeout("setNavItemSelected();", 0);
         });
     </script>
 {% endblock %}
