--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1034,6 +1034,9 @@ t
 .side {
   height:29em
 }
+.side-lg {
+  height: 33em;
+}
 .side-md {
   height: 25em
 }
@@ -1284,6 +1287,14 @@ div.org-container input[type="checkbox"] {
 
 .indent {
   padding: 0 1em;
+}
+.registration-status-container {
+  margin:0 0 0.8em 0; 
+  font-size: 0.95em;
+}
+.registration-label {
+  display:inline-block; 
+  opacity: 0.7;
 }
 
 /** Responsive sizes **/
