--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1203,6 +1203,14 @@ div.org-container input[type="checkbox"] {
 .custom-container-content {
   font-size: 0.95em;
 }
+.registration-status-container {
+  margin:0 0 0.8em 0; 
+  font-size: 0.95em;
+}
+.registration-label {
+  display:inline-block; 
+  opacity: 0.7;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
