--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1327,7 +1327,30 @@ div.org-container input[type="checkbox"] {
 .indent {
   padding: 0 1em;
 }
-
+.custom-container {
+  display: flex;
+  margin-bottom: 2em;
+  border-bottom: 1px solid #E0E6E3;
+  padding: 0.1em 0 1.5em 0;
+}
+.custom-container-item, .custom-container-item-right {
+  width: 33%;
+  max-width: 100%;
+}
+.custom-container-item-right {
+  margin-right: 0.12em;
+}
+.custom-container-content {
+  font-size: 0.95em;
+}
+.registration-status-container {
+  margin:0 0 0.8em 0; 
+  font-size: 0.95em;
+}
+.registration-label {
+  display:inline-block; 
+  opacity: 0.7;
+}
 /** Responsive sizes **/
 @media (max-width: 480px) {
   #footerLockup {
