--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -237,6 +237,15 @@
     {% if person %}
     <form id="sendEmailForm" action="{{ url_for('portal.invite') }}" method="POST">
         <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
+         {% if person %}
+            <div class="registration-status-container">
+                <span class="text-muted">Registration Status: </span>
+                {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
+                {% else %}
+                <h4 class="text-success registration-label">registered</h4>
+                {% endif %}
+            </div>
+        {% endif %}
         <label id="sendEmailLabel" class="text-muted">{{ _("Send Email to Patient") }}</label>
         <select  id="profileEmailSelect" class="form-control bd-element">
             <option value="">{{ _("Select Email...") }}</option>
@@ -688,8 +697,6 @@
     });
     </script>
 {%- endmacro %}
-
-
 {% macro profileAssessment(person, instrument_id, authored_date) -%}
 
         <div id="userSessionReportDetail" cellpadding="2">
@@ -1082,15 +1089,14 @@
     {% if person and person.has_role('patient') and current_user.has_role('provider') and (current_user.id != person.id) %}
          <div class="row">
             <div class="col-md-6 col-xs-12">
-                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md{%endif%}">
+                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md{%else%}side-lg{%endif%}">
                     <h4 id="patientInformationLoc" class="profile-item-title">{% if person.has_role('patient') %}{{ _("Patient Information") }}{%else%}{{ _("User Information") }}{%endif%}</h4>
                     {{profileName(person)}}
                     {{profileBirthDate(person)}}
-
                 </div>
             </div>
             <div class="col-md-6 col-xs-12">
-                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md side-xs{%endif%}">
+                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md side-xs{%else%}side-lg{%endif%}">
                     <h4 id="communicationsLoc" class="profile-item-title">{{ _("Communications") }}</h4>
                     {{profilePhone(person)}}
                     {{profileEmail(person)}}
