--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -237,15 +237,13 @@
     {% if person %}
     <form id="sendEmailForm" action="{{ url_for('portal.invite') }}" method="POST">
         <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
-         {% if person %}
-            <div class="registration-status-container">
-                <span class="text-muted">Registration Status: </span>
-                {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
-                {% else %}
-                <h4 class="text-success registration-label">registered</h4>
-                {% endif %}
-            </div>
-        {% endif %}
+        <div class="registration-status-container">
+            <span class="text-muted">Registration Status: </span>
+            {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">not yet registered</h4>
+            {% else %}
+            <h4 class="text-success registration-label">registered</h4>
+            {% endif %}
+        </div>
         <label id="sendEmailLabel" class="text-muted">{{ _("Send Email to Patient") }}</label>
         <select  id="profileEmailSelect" class="form-control bd-element">
             <option value="">{{ _("Select Email...") }}</option>
@@ -1054,7 +1052,7 @@
                 <div class="profile-item-container custom-container-item-right">
                     <h4 class="profile-item-title">{{_("Log in as patient")}}</h4>
                     <div class="custom-container-content text-muted">{{_("This logs you out, and logs in the patient without their needing to enter credentials. This is so the patient can complete their questionnaire on this device. Ideal for tablet and kiosk computers.")}}</div><br/>
-                    <button class="btn btn-tnth-primary" onclick="location.replace('/login-as/{{person.id}}');">{{_("Login as patient")}}</button>
+                    <button class="btn btn-tnth-primary" onclick="handleLoginAs();">{{_("Login as patient")}}</button>
                 </div>
                 <div class="profile-item-container custom-container-item">
                     <h4 class="profile-item-title">{{_("Enter manually")}}</h4>
